--- a/genindex.html
+++ b/genindex.html
@@ -41,7 +41,6 @@
  | <a href="#E"><strong>E</strong></a>
  | <a href="#G"><strong>G</strong></a>
  | <a href="#L"><strong>L</strong></a>
- | <a href="#N"><strong>N</strong></a>
  | <a href="#P"><strong>P</strong></a>
  | <a href="#R"><strong>R</strong></a>
  | <a href="#S"><strong>S</strong></a>
@@ -85,16 +84,20 @@
       <li><a href="index.html#polyanalyst6api.api.Project.execute">execute() (polyanalyst6api.api.Project method)</a>
 </li>
   </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="index.html#polyanalyst6api.api.Project.execution_statistics">execution_statistics (polyanalyst6api.api.Project attribute)</a>
-</li>
-  </ul></td>
 </tr></table>
 
 <h2 id="G">G</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="index.html#polyanalyst6api.api.API.get">get() (polyanalyst6api.api.API method)</a>
+</li>
+      <li><a href="index.html#polyanalyst6api.api.Project.get_execution_statistics">get_execution_statistics() (polyanalyst6api.api.Project method)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="index.html#polyanalyst6api.api.Project.get_nodes">get_nodes() (polyanalyst6api.api.Project method)</a>
+</li>
+      <li><a href="index.html#polyanalyst6api.api.API.get_versions">get_versions() (polyanalyst6api.api.API method)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -103,14 +106,6 @@
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="index.html#polyanalyst6api.api.API.login">login() (polyanalyst6api.api.API method)</a>
-</li>
-  </ul></td>
-</tr></table>
-
-<h2 id="N">N</h2>
-<table style="width: 100%" class="indextable genindextable"><tr>
-  <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="index.html#polyanalyst6api.api.Project.nodes">nodes (polyanalyst6api.api.Project attribute)</a>
 </li>
   </ul></td>
 </tr></table>
