--- a/genindex.html
+++ b/genindex.html
@@ -14,6 +14,7 @@
     <script type="text/javascript" src="_static/jquery.js"></script>
     <script type="text/javascript" src="_static/underscore.js"></script>
     <script type="text/javascript" src="_static/doctools.js"></script>
+    <script type="text/javascript" src="_static/language_data.js"></script>
     <link rel="index" title="Index" href="#" />
     <link rel="search" title="Search" href="search.html" />
    
@@ -93,9 +94,13 @@
 </li>
       <li><a href="index.html#polyanalyst6api.api.Project.get_execution_statistics">get_execution_statistics() (polyanalyst6api.api.Project method)</a>
 </li>
+      <li><a href="index.html#polyanalyst6api.api.Project.get_nodes">get_nodes() (polyanalyst6api.api.Project method)</a>
+</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="index.html#polyanalyst6api.api.Project.get_nodes">get_nodes() (polyanalyst6api.api.Project method)</a>
+      <li><a href="index.html#polyanalyst6api.api.API.get_server_info">get_server_info() (polyanalyst6api.api.API method)</a>
+</li>
+      <li><a href="index.html#polyanalyst6api.api.Project.get_tasks">get_tasks() (polyanalyst6api.api.Project method)</a>
 </li>
       <li><a href="index.html#polyanalyst6api.api.API.get_versions">get_versions() (polyanalyst6api.api.API method)</a>
 </li>
@@ -177,7 +182,7 @@
       &copy;2018, yatmanov.
       
       |
-      Powered by <a href="http://sphinx-doc.org/">Sphinx 1.8.2</a>
+      Powered by <a href="http://sphinx-doc.org/">Sphinx 1.8.5</a>
       &amp; <a href="https://github.com/bitprophet/alabaster">Alabaster 0.7.12</a>
       
     </div>
