--- a/genindex.html
+++ b/genindex.html
@@ -153,6 +153,10 @@
       <li><a href="index.html#polyanalyst6api.api.Project.save">save() (polyanalyst6api.api.Project method)</a>
 </li>
   </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="index.html#polyanalyst6api.api.Project.set_parameters">set_parameters() (polyanalyst6api.api.Project method)</a>
+</li>
+  </ul></td>
 </tr></table>
 
 <h2 id="U">U</h2>
