--- a/genindex.html
+++ b/genindex.html
@@ -69,12 +69,24 @@
       <li><a href="index.html#polyanalyst6api.ClientException">ClientException</a>
 </li>
   </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="index.html#polyanalyst6api.api.RemoteFileSystem.create_folder">create_folder() (polyanalyst6api.api.RemoteFileSystem method)</a>
+</li>
+  </ul></td>
 </tr></table>
 
 <h2 id="D">D</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="index.html#polyanalyst6api.api.Project.delete">delete() (polyanalyst6api.api.Project method)</a>
+</li>
+      <li><a href="index.html#polyanalyst6api.api.RemoteFileSystem.delete_file">delete_file() (polyanalyst6api.api.RemoteFileSystem method)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="index.html#polyanalyst6api.api.RemoteFileSystem.delete_folder">delete_folder() (polyanalyst6api.api.RemoteFileSystem method)</a>
+</li>
+      <li><a href="index.html#polyanalyst6api.api.RemoteFileSystem.download_file">download_file() (polyanalyst6api.api.RemoteFileSystem method)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -136,6 +148,8 @@
 <h2 id="R">R</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="index.html#polyanalyst6api.api.RemoteFileSystem">RemoteFileSystem (class in polyanalyst6api.api)</a>
+</li>
       <li><a href="index.html#polyanalyst6api.api.Project.repair">repair() (polyanalyst6api.api.Project method)</a>
 </li>
   </ul></td>
@@ -163,6 +177,12 @@
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="index.html#polyanalyst6api.api.Project.unload">unload() (polyanalyst6api.api.Project method)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="index.html#polyanalyst6api.api.RemoteFileSystem.upload">upload() (polyanalyst6api.api.RemoteFileSystem method)</a>
+</li>
+      <li><a href="index.html#polyanalyst6api.api.RemoteFileSystem.upload_file">upload_file() (polyanalyst6api.api.RemoteFileSystem method)</a>
 </li>
   </ul></td>
 </tr></table>
