--- a/genindex.html
+++ b/genindex.html
@@ -110,6 +110,8 @@
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="index.html#polyanalyst6api.api.API.get_parameters">get_parameters() (polyanalyst6api.api.API method)</a>
+</li>
       <li><a href="index.html#polyanalyst6api.api.API.get_server_info">get_server_info() (polyanalyst6api.api.API method)</a>
 </li>
       <li><a href="index.html#polyanalyst6api.api.Project.get_tasks">get_tasks() (polyanalyst6api.api.Project method)</a>
