--- a/genindex.html
+++ b/genindex.html
@@ -127,6 +127,10 @@
       <li><a href="index.html#polyanalyst6api.api.API.login">login() (polyanalyst6api.api.API method)</a>
 </li>
   </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="index.html#polyanalyst6api.api.API.logout">logout() (polyanalyst6api.api.API method)</a>
+</li>
+  </ul></td>
 </tr></table>
 
 <h2 id="P">P</h2>
