--- a/genindex.html
+++ b/genindex.html
@@ -106,10 +106,14 @@
 </li>
       <li><a href="index.html#polyanalyst6api.api.Project.get_execution_statistics">get_execution_statistics() (polyanalyst6api.api.Project method)</a>
 </li>
-      <li><a href="index.html#polyanalyst6api.api.Project.get_nodes">get_nodes() (polyanalyst6api.api.Project method)</a>
+      <li><a href="index.html#polyanalyst6api.api.Project.get_execution_stats">get_execution_stats() (polyanalyst6api.api.Project method)</a>
+</li>
+      <li><a href="index.html#polyanalyst6api.api.Project.get_node_list">get_node_list() (polyanalyst6api.api.Project method)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="index.html#polyanalyst6api.api.Project.get_nodes">get_nodes() (polyanalyst6api.api.Project method)</a>
+</li>
       <li><a href="index.html#polyanalyst6api.api.API.get_parameters">get_parameters() (polyanalyst6api.api.API method)</a>
 </li>
       <li><a href="index.html#polyanalyst6api.api.API.get_server_info">get_server_info() (polyanalyst6api.api.API method)</a>
